# rust-radix

./: Cargo.toml
examples/: base16.rs  base32.rs  base58.rs  base64.rs  base8.rs  base94.rs
src/: charsets.rs  compiling_error.txt  lib.rs
tests/: base16.rs  base32.rs  base58.rs  base64.rs  base8.rs  base85.rs
